# inventium

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
crates/inventium/: Cargo.toml
crates/inventium-core/: Cargo.toml
crates/inventium-core/src/: lib.rs
crates/inventium-curse/: Cargo.toml
crates/inventium-curse/src/: curse.rs  lib.rs  param.rs  serialize.rs
crates/inventium-mcmod/: Cargo.toml
crates/inventium-rinth/: Cargo.toml
crates/inventium-rinth/src/: lib.rs  rinth.rs  serialize.rs
crates/inventium/src/: main.rs
src/: lib.rs
src/curse/: curse.rs  mod.rs
src/intermediary/: serialize.rs
