[workspace]
resolver = "3"
members = [
    "crates/inventium-core",
    "crates/inventium",
    "crates/inventium-curse",
    "crates/inventium-rinth",
    "crates/inventium-mcmod",
]

[workspace.dependencies]
serde = "1.0.225"
serde_json = "1.0.145"
toml = "0.9.7"
reqwest = "0.12.23"
tokio = "1.47.1"