[package]
name = "inventium"
version = "0.1.0"
edition = "2024"
description = "Rust wrapper for Minecraft 3rd-party mod platform API"
license = "AGPL-3.0-or-later"
repository = "https://github.com/aequoreus/inventium"
authors = ["Oganesson897 <oganesson897@gmail.com>"]

[dependencies]
inventium-core = { path = "../inventium-core" }
inventium-curse = { path = "../inventium-curse" }
inventium-rinth = { path = "../inventium-rinth" }
inventium-mcmod = { path = "../inventium-mcmod" }